creusot/tests/should_succeed/bug/510.stderr
warning: support for string types is limited and experimental
 --> 510.rs:8:5
  |
8 |     22 as char;
  |     ^^^^^^^^^^
  |
  = note: `#[warn(creusot::experimental)]` on by default

error: Non integral casts are currently unsupported

error: aborting due to 1 previous error; 1 warning emitted

